# dlinear4

./: .bazelrc  .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CPPLINT.cfg  README.md  WORKSPACE  dlinear.sh  dreal.sh  run.sh  setup.py
.github/workflows/: main.yml
dreal/: BUILD.bazel  dreal_main.cc  dreal_main.h  dreal_py.cc  gmp.cc  gmp.h  qsopt_ex.cc  qsopt_ex.h  soplex.h
dreal/api/: BUILD.bazel  api.cc  api.h  api_test_util.h
dreal/api/test/: api_test.cc  cav19_benchmark.cc
dreal/dr/: driver.cc  parser.yy  scanner.ll
dreal/smt2/: driver.cc  driver.h  parser.yy  scanner.ll
dreal/solver/: BUILD.bazel  config.cc  config.h  context.cc  context.h  context_impl.cc  context_impl.h  expression_evaluator.cc  expression_evaluator.h  filter_assertion.cc  formula_evaluator_cell.cc  linear_theory_solver.cc  linear_theory_solver.h  qsoptex_context_impl.cc  qsoptex_context_impl.h  qsoptex_sat_solver.cc  qsoptex_sat_solver.h  qsoptex_theory_solver.cc  qsoptex_theory_solver.h  sat_solver.cc  sat_solver.h  soplex_context_impl.cc  soplex_context_impl.h  soplex_sat_solver.cc  soplex_sat_solver.h  soplex_theory_solver.cc  soplex_theory_solver.h
dreal/solver/test/: config_test.cc  context_test.cc  jorge_test.cc  sat_solver_test.cc
dreal/symbolic/: BUILD.bazel  prefix_printer.cc  prefix_printer.h  symbolic.cc
dreal/symbolic/test/: prefix_printer_test.cc  symbolic_test.cc
dreal/test/smt2/: BUILD.bazel  andrea_callia_01.smt2.expected  andrea_callia_01.smt2.expected_continuous  define_fun_01.smt2  define_fun_02.smt2  define_fun_02.smt2.expected  define_fun_02.smt2.expected_continuous  define_fun_03.smt2  define_fun_04.smt2  disj_varbounds_overwrite.smt2  dzufferey_02.smt2.expected_continuous_phase_2  dzufferey_02.smt2.expected_phase_2  fedor_14.smt2.expected_continuous_phase_2  fedor_15.smt2.expected_continuous_phase_2  fedor_16.smt2.expected_continuous_phase_2  github_issue_198.smt2.expected  github_issue_198.smt2.expected_continuous  github_issue_200_1.smt2.expected_continuous  ite_02.smt2  ite_03.smt2.expected_continuous_phase_2  let_06.smt2  let_06.smt2.expected  let_06.smt2.expected_continuous  let_07.smt2  let_07.smt2.expected  let_08.smt2  let_09.smt2  let_09.smt2.expected_continuous_phase_2  let_10.smt2  test.py  trivial_02.smt2.expected  xor_01.smt2  xor_01.smt2.expected  xor_01.smt2.expected_continuous  zenna_03.smt2.expected_continuous_phase_2  zenna_04.smt2.expected_continuous_phase_2  zenna_04.smt2.expected_phase_2
dreal/util/: BUILD.bazel  box.cc  box.h  ibex_converter.cc  ibex_converter.h  if_then_else_eliminator.cc  if_then_else_eliminator.h  infty.cc  infty.h  literal.cc  literal.h  martin_cnfizer.cc  martin_cnfizer.h  math.cc  math.h  plaisted_greenbaum_cnfizer.cc  plaisted_greenbaum_cnfizer.h  rounding_mode_guard.h  string_to_interval.cc  timer.cc  timer.h
dreal/util/test/: box_test.cc  cds_test.cc  if_then_else_eliminator_test.cc  martin_cnfizer_test.cc  nnfizer_test.cc  plaisted_greenbaum_cnfizer_test.cc  predicate_abstractor_test.cc  tseitin_cnfizer_test.cc
scripts/: workspace_status.sh
setup/: setup_qsopt-ex.sh
setup/mac/: install.sh  install_prereqs.sh
setup/ubuntu/: install_bazel.sh
setup/ubuntu/18.04/: install.sh
setup/ubuntu/20.04/: install_prereqs.sh
test/: BUILD.bazel
tools/: bazel  dreal.bzl  generate_version_header.sh  make-variables.bzl
